// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppConsentsPage should match snapshot where the app is loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppConsentsPage should match snapshot where there are no consents returned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname="el-text-base"
      >
        will-test-dev-co-voracious-person
         Consents
      </mock-styled.h1>
      <mock-styled.div
        classname="el-mb11 el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
        role="alertdialog"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              style="font-size: 1.25rem;"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </div>
        <div
          class="el-pn-content"
        >
          No record of any consents for this app - it looks like you need to send an email requesting that your customers agree to your new permission settings. You can do this below or our team will do it as part of the review process.
        </div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname="el-button-group-align-left"
        >
          <mock-styled.button
            classname="el-intent-primary"
          >
            <mock-styled.div />
            Send Requests
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname="el-text-base"
    >
      will-test-dev-co-voracious-person
       Consents
    </mock-styled.h1>
    <mock-styled.div
      classname="el-mb11 el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
      role="alertdialog"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <mock-styled.span
          classname="el-icon-new"
          role="img"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            style="font-size: 1.25rem;"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </div>
      <div
        class="el-pn-content"
      >
        No record of any consents for this app - it looks like you need to send an email requesting that your customers agree to your new permission settings. You can do this below or our team will do it as part of the review process.
      </div>
    </mock-styled.div>
    <mock-styled.div>
      <mock-styled.div
        classname="el-button-group-align-left"
      >
        <mock-styled.button
          classname="el-intent-primary"
        >
          <mock-styled.div />
          Send Requests
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppConsentsPage should match snapshot with consents 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname="el-text-base"
      >
        will-test-dev-co-voracious-person
         Consents
      </mock-styled.h1>
      <mock-styled.div
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="5"
        role="table"
      >
        <mock-styled.div
          role="row"
        >
          <mock-styled.div
            aria-label="Client"
            role="columnheader"
          >
            Client
          </mock-styled.div>
          <mock-styled.div
            aria-label="Email"
            role="columnheader"
          >
            Email
          </mock-styled.div>
          <mock-styled.div
            aria-label="Date Sent"
            role="columnheader"
          >
            Date Sent
          </mock-styled.div>
          <mock-styled.div
            aria-label="Status"
            role="columnheader"
          >
            Status
          </mock-styled.div>
          <mock-styled.div
            aria-label="Date Accepted"
            role="columnheader"
          >
            Date Accepted
          </mock-styled.div>
          <mock-styled.div
            role="columnheader"
          >
            Resend Email
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
          role="row"
        >
          <mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
                role="img"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Client"
              />
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Email"
              >
                example@mail.com
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Date Sent"
              >
                13/06/2022 15:39
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Status"
              >
                Pending
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
              role="cell"
            >
              <mock-styled.div
                data-narrow-label="Date Accepted"
              >
                13/06/2022 15:39
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              role="cell"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2m-1.41 2L12 12.59 5.41 6zM4 18V7.41L10.59 14a2 2 0 0 0 2.82 0L20 7.41V18z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname="el-text-base"
    >
      will-test-dev-co-voracious-person
       Consents
    </mock-styled.h1>
    <mock-styled.div
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="5"
      role="table"
    >
      <mock-styled.div
        role="row"
      >
        <mock-styled.div
          aria-label="Client"
          role="columnheader"
        >
          Client
        </mock-styled.div>
        <mock-styled.div
          aria-label="Email"
          role="columnheader"
        >
          Email
        </mock-styled.div>
        <mock-styled.div
          aria-label="Date Sent"
          role="columnheader"
        >
          Date Sent
        </mock-styled.div>
        <mock-styled.div
          aria-label="Status"
          role="columnheader"
        >
          Status
        </mock-styled.div>
        <mock-styled.div
          aria-label="Date Accepted"
          role="columnheader"
        >
          Date Accepted
        </mock-styled.div>
        <mock-styled.div
          role="columnheader"
        >
          Resend Email
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
        role="row"
      >
        <mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.span
              classname="el-intent-default el-icon-new"
              role="img"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                style="font-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Client"
            />
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Email"
            >
              example@mail.com
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Date Sent"
            >
              13/06/2022 15:39
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Status"
            >
              Pending
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-table-cell-has-dark-text"
            role="cell"
          >
            <mock-styled.div
              data-narrow-label="Date Accepted"
            >
              13/06/2022 15:39
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            role="cell"
          >
            <mock-styled.div>
              <mock-styled.span
                classname="el-intent-default el-icon-new"
                role="img"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2m-1.41 2L12 12.59 5.41 6zM4 18V7.41L10.59 14a2 2 0 0 0 2.82 0L20 7.41V18z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
